Changes from Views service

--- a/Ranjan/styles/main.css
+++ b/Ranjan/styles/main.css
@@ -217,12 +217,12 @@
 }
 
 #kendoUiMobileApp.km-nova .button-group .km-button.primary {
-    background-color: #ff4350;
-    border-color: #ff4350;
+    background-color: #10c4b2;
+    border-color: #10c4b2;
 }
 
 #kendoUiMobileApp.km-flat .button-group .km-button.primary {
-    color: #fff;
+    color: #ffffff;
 }
 
 #kendoUiMobileApp.km-ios7 .button-group .km-button.primary {
